--- a/booking.html
+++ b/booking.html
@@ -89,7 +89,7 @@
             <span class="form-control-plaintext" id="totalDays" ></span>
           </div>
           <div class="form-group col-md-3">
-            <h6><label class="label" for="inputType">Car Type</label></h6>
+            <h6><label class="label" for="inputType">Vehicle Type</label></h6>
             <span class="form-control-plaintext" id="carType" ></span>
           </div>
           <div class="form-group col-md-6">
