--- a/welcome.html
+++ b/welcome.html
@@ -170,7 +170,6 @@
             <select required class="custom-select" id="inputGroupSelect02" >
               <option disabled selected hidden>Drop City</option>
               
-              <option disabled selected hidden>Source City</option>
               <option value="Panaji"> Panaji </option>
               <option value="Madgaon"> Madgaon </option>
               <option value="Mormugao"> Mormugao </option>
@@ -286,12 +285,11 @@
         <div class="card">
           <img class="card-img-top" src="images/swift.jpg" alt="swift-img">
           <div class="card-header">
-            <h3>Hatchback</h3>
+            <h3>Scooty</h3>
           </div>
           <div class="card-body">
-            <h3>₹999/day</h3>
-            <p>Swift/i20/Altroz</p>
-            <p>Recommended for 4-5 People</p>
+            <h3>₹499/day</h3>
+            <p>Activa / Jupiter / Access</p>
             <a href="booking.html" button onclick="hatchback()" id ="Hatchback" class="btn btn-lg btn-block btn-primary" type="submit">BOOK NOW</button></a>
           </div>
         </div>
@@ -301,12 +299,11 @@
         <div class="card">
           <img class="card-img-top" src="images/verna.jpg" alt="verna-img">
           <div class="card-header">
-            <h3>Sedan</h3>
+            <h3>Bike</h3>
           </div>
           <div class="card-body">
-            <h3>₹1399/day</h3>
-            <p>Ciaz/Honda City/Verna</p>
-            <p>Recommended for 5-6 People</p>
+            <h3>₹799/day</h3>
+            <p>Pulsar / Shine / Splendor</p>
             <a href="booking.html" button onclick="Sedan()" id ="Sedan" class="btn btn-lg btn-block btn-primary" type="submit">BOOK NOW</button></a>
           </div>
         </div>
@@ -316,12 +313,11 @@
         <div class="card">
           <img class="card-img-top" src="images/creta.jpg" alt="creta-img">
           <div class="card-header">
-            <h3>SUV</h3>
+            <h3>Cruiser</h3>
           </div>
           <div class="card-body">
-            <h3>₹2399/day</h3>
-            <p>XUV/Scorpio/Creta</p>
-            <p>Recommended for 7+ People</p>
+            <h3>₹1199/day</h3>
+            <p>Bullet / Avenger / Jawa</p>
             <a href="booking.html" button onclick="SUV()" id ="SUV" class="btn btn-lg btn-block btn-primary" type="button">BOOK NOW</button></a>
           </div>
         </div>
