--- a/booking.html
+++ b/booking.html
@@ -107,15 +107,15 @@
 
         <h5 class="headings">Included with Your Rental</h5>
         <hr>
-        <p>✔️ If the car’s bodywork gets damaged, the most you’ll pay towards repairs covered by the Collision Damage Waiver is the damage excess. This cover is only valid if you stick to the terms of the rental agreement. It doesn’t cover other
-          parts of the car (e.g. glass, wheels, interior, roof or undercarriage), or charges (e.g. for towing or off-road time), or anything in the car (e.g. child seats, GPS devices or personal belongings).</p>
-        <p>✔️ This covers the driver’s liability for injuries and property damage which are covered by the policy. It does not cover injuries to the driver or damage to the rental car. This cover is only valid if you stick to the terms of the rental
+        <p>✔️ If the vehicle’s bodywork gets damaged, the most you’ll pay towards repairs covered by the Collision Damage Waiver is the damage excess. This cover is only valid if you stick to the terms of the rental agreement. It doesn’t cover other
+          parts of the vehicle (e.g. glass, wheels, interior, seat or undercarriage), or charges (e.g. for towing or off-road time), or anything in the vehicle (e.g. child seats, GPS devices or personal belongings).</p>
+        <p>✔️ This covers the driver’s liability for injuries and property damage which are covered by the policy. It does not cover injuries to the driver or damage to the rental vehicle. This cover is only valid if you stick to the terms of the rental
           agreement.</p>
-        <p>✔️ If the car is stolen, the most you’ll pay towards replacement costs covered by the policy is the theft excess. This cover is only valid if you stick to the terms of the rental agreement.</p>
+        <p>✔️ If the vehicle is stolen, the most you’ll pay towards replacement costs covered by the policy is the theft excess. This cover is only valid if you stick to the terms of the rental agreement.</p>
         <p>✔️ In the event of an accident, this insurance covers medical and legal costs for injuries which are covered by the policy, including death and loss of limb(s). This cover is only valid if you stick to the terms of the rental agreement.
         </p>
         <p>✔️ Supplemental Liability Insurance (SLI) protects the driver against third-party claims for bodily injury or property damage as the result of an accident, subject to the terms of the rental agreement. This protection applies to all
-          authorised drivers of the rental car.</p>
+          authorised drivers of the rental vehicle.</p>
         <p> ✔️ Airport Surcharge </p>
         <p> ✔️ Local Taxes</p>
         <p>✔️ Free Tank</p>
@@ -129,16 +129,15 @@
       <p>• This reservation can be cancelled online free of charge up to 48 hours before the start of the rental. Reservations cancelled within 48 hours of the start of the rental will be charged a fee equal to a 3 day rental. There will be no refund
         or additional charge for reservations less than 3 days in duration. Where the vehicle cannot be picked up due to insufficient documentation or failure to provide a valid credit card, this will be treated as a cancellation made within 48 hours
         provided we are advised at the pick-up time.</p>
-      <p>• Reservations can be changed online free of charge before the start of the rental. Where these changes affect the rental price such as duration, car rental location or car type the difference will be calculated from the current published
-        price
-        of the new rental. rentalcars.com cannot refund any unused days or partial days if the vehicle is returned early on any rental.</p>
+      <p>• Reservations can be changed online free of charge before the start of the rental. Where these changes affect the rental price such as duration, vehicle rental location or vehicle type the difference will be calculated from the current published
+        price of the new rental. cometrental cannot refund any unused days or partial days if the vehicle is returned early on any rental.</p>
       <p>• A 100% cancellation fee will be charged where we are not notified of cancellation prior to the start of the rental.</p>
-      <p>• Additional charges may apply at the counter if you pick up or drop off the car at a different date, time, or location than stated on your reservation.</p>
-      <p>• Only the driver will be able to pick up this rental car at the counter. An additional driver can be added at the counter for a fee payable directly to the rental car company.
+      <p>• Additional charges may apply at the counter if you pick up or drop off the vehicle at a different date, time, or location than stated on your reservation.</p>
+      <p>• Only the driver will be able to pick up this rental vehicle at the counter. An additional driver can be added at the counter for a fee payable directly to the rental vehicle company.
       </p>
-      <p>• Additional charges may apply for drivers under the age of 25.
+      <p>• Additional charges may apply for drivers under the age of 18.
       </p>
-      <p>• Budget Rent a Car will charge the driver at the rental counter for optional items you add to your reservation, including any child seats or special requests such as pre-paid fuel.</p>
+      <p>• Budget Rent a vehicle will charge the driver at the rental counter for optional items you add to your reservation, including any child seats or special requests such as pre-paid fuel.</p>
       <p>• The driver will be required to present a valid driver's license and a valid credit card or debit card in his/her name at the counter for the security deposit. </p>
 
 
@@ -188,7 +187,7 @@
         <h4>Order Recap</h4>
       </div>
       <div class="p-2 d-flex">
-        <div class="col-8">Car Rent per day</div>
+        <div class="col-8">vehicle Rent per day</div>
         <span id="disp_rpd" class="ml-auto"></span>
       </div>
       <div class="p-2 d-flex">
@@ -220,7 +219,7 @@
       <div class="form-check">
         <input  type="checkbox" id="register" disabled="disabled" onclick="EnableDisableButton(this);">
         <label class="form-check-label" for="invalidCheck2">
-          I agree to reservation's terms and conditions, Comet's Terms and Conditions and privacy policy by booking this car.
+          I agree to reservation's terms and conditions, Comet's Terms and Conditions and privacy policy by booking this vehicle.
         </label>
 
         
@@ -261,7 +260,7 @@
 
     <div class="text-center">
 
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter" class="btn btn-primary" id="button1"  disabled >Reserve my Rental Car at ₹0/-</button>
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter" class="btn btn-primary" id="button1"  disabled >Reserve my Rental vehicle at ₹0/-</button>
       
 
 
